# MarathonRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LibertyRecompResources  README.md  build_errors.txt  d  game_test_log.txtcd  implemented_imports.txt  log2.txt  output.txt  py_out.txt  recomp_output.txt  required_imports.txt  run2.sh  run_after_fix.txt  run_output.txt  run_output_latest.txt  run_recomp.sh  run_xenon.py  run_xenon.sh  test_shader_cache.cpp  test_shader_cache_correct.cpp  vcpkg.json  xenon_log.txt
LibertyRecomp/: CMakeLists.txt  app.cpp  app.h  exports.cpp  exports.h  main.cpp  stdafx.h
LibertyRecompLib/: CMakeLists.txt
MarathonRecomp/: CMakeLists.txt  app.cpp  app.h  exports.cpp  framework.h  main.cpp  sdl_listener.h  xxHashMap.h
MarathonRecompLib/: CMakeLists.txt
UnleashedRecomp/: CMakeLists.txt  app.cpp  exports.cpp  main.cpp
build_tools/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
build_xenosrecomp/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
docs/: BUILDING.md  DUMPING-en.md  INSTALLATION_ARCHITECTURE.md  SHADER_PIPELINE.md
flatpak/: README.md  io.github.ozordi.libertyrecomp.desktop  io.github.ozordi.libertyrecomp.json  io.github.ozordi.libertyrecomp.metainfo.xml  io.github.sonicnext_dev.marathonrecomp.json
shader_batch/: gta_atmoscatt_clouds.fxc  gta_decal_dirt.fxc  gta_decal_glue.fxc  gta_decal_normal_only.fxc  gta_diffuse_instance.fxc  gta_emissivenight.fxc  gta_glass.fxc  gta_glass_emissive.fxc  gta_hair_sorted_alpha.fxc  gta_normal_cubemap_reflect.fxc  gta_normal_decal.fxc  gta_normal_reflect.fxc  gta_normal_spec.fxc  (+26 more)
tools/: CMakeLists.txt  analyze_shader.py  analyze_shaders.py  rpf_dump.py
tools/find_save_restore/: CMakeLists.txt  find_save_restore.cpp
tools/rage_fxc_extractor/: CMakeLists.txt  rage_fxc_extractor.cpp
tools/x_decompress/: CMakeLists.txt
(+1028 files in other folders)
