option(LIBERTY_RECOMP_OPTIMIZE_TOOLS "Apply compiler optimizations to build tools." ON)
if (LIBERTY_RECOMP_OPTIMIZE_TOOLS)
    if (WIN32)
        add_compile_options(/O2)
    else()
        add_compile_options(-O3)
    endif()
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
endif()

add_subdirectory(${LIBERTY_RECOMP_TOOLS_ROOT}/bc_diff)
add_subdirectory(${LIBERTY_RECOMP_TOOLS_ROOT}/file_to_c)
add_subdirectory(${LIBERTY_RECOMP_TOOLS_ROOT}/fshasher)
add_subdirectory(${LIBERTY_RECOMP_TOOLS_ROOT}/u8extract)
add_subdirectory(${LIBERTY_RECOMP_TOOLS_ROOT}/x_decompress)
add_subdirectory(${LIBERTY_RECOMP_TOOLS_ROOT}/XenonRecomp)
add_subdirectory(${LIBERTY_RECOMP_TOOLS_ROOT}/XenosRecomp)
